<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authentication.google.RegistoGoogleActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNombresG"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/nombre_completos"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPaternoG"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/apellido_paterno"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputMaternoG"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/apellido_materno"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistroG"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ui_button_background"
            android:text="@string/registrar"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>